# g_test_project

./: CMakeLists.txt  README.md  project_setup.sh
test/: CMakeLists.txt  my_test.cpp
